# voice_hub

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  voice_hub模块方案.md  任务.md  更新requests和api可读性改造.md  更新requests和api可读性改造全部库.md
docs/: aliyun-tts.md  glm-tts.md  index.md  mimo-tts.md  minimax-tts.md
tests/: test_aliyun.py  test_aliyun_cosyvoice.py  test_client.py  test_glm.py  test_mimo.py  test_minimax.py  test_my.py
voice_hub/: __init__.py  client.py  errors.py  interfaces.py  sample.py  speech.py
voice_hub/providers/: __init__.py  azure.py  base.py  mimo.py  openai.py  placeholder.py
voice_hub/providers/aliyun/: __init__.py
voice_hub/providers/aliyun/cosyvoice/: __init__.py  api.py  clone.py  models.py  transport.py  tts.py  voices.py
voice_hub/providers/aliyun/qwen_tts/: __init__.py  api.py  models.py  parser.py  payload.py  transport.py  tts.py  voices.py
voice_hub/providers/glm/: __init__.py  api.py  models.py  payload.py  transport.py  tts.py
voice_hub/providers/mimo/: __init__.py  api.py  models.py  parser.py  payload.py  transport.py  tts.py  voices.py
voice_hub/providers/minimax/: __init__.py  api.py  clone.py  models.py  parser.py  payload.py  transport.py  tts.py  voices.py
